# gfractor

./: .gitignore  .gitmodules  BUILD_SYSTEM_FILES.txt  BUILD_SYSTEM_SETUP.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODING_STANDARDS.md  README.md  UI_RESIZABLE_AND_PROTOTYPING.md  feat.md  transient_meter.md
.claude/: AGENT_TIERS.md  README.md  ROADMAP.md  plan.md
.claude/commands/: new-juce-plugin.md  release-build.md
.claude/hooks/: hooks.json
.claude/includes/: build-common.md
.claude/knowledge/: SKILL_INDEX.json  juce-best-practices.json
.claude/scripts/hooks/: prevent-audio-thread-allocation.sh  run-tests-after-dsp-change.sh  validate-parameter-ids.sh  warn-on-processblock-allocation.sh  warn-on-ui-thread-safety.sh
.claude/skills/cross-platform-builds/: SKILL.md
.claude/static-docs/: BUILD_GUIDE.md  GETTING_STARTED.md  RELEASE_CHECKLIST.md  TESTING_STRATEGY.md
.github/workflows/: build.yml  release.yml
Docs/: ARCHITECTURE.md  BUILD.md  FIGMA_UI_SPEC.md  QUICK_START.md  RELEASING.md  SIGNING.md  feature_ideas.md  gFractor_Layout_Spec.md  gfractor-mockup.html  overview.md  shortcuts.md
Docs/plans/: 2026-03-06-linux-support.md
Resources/Fonts/: README.md
Resources/ML/: kick_detector.onnx
Scripts/: build.bat  build.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AudioRingBuffer.cpp  AudioRingBuffer.h  DSPConstants.h  FFTProcessor.cpp  FFTProcessor.h  IGhostDataSink.h  IPeakLevelSource.h  SpectralSeparator.cpp  SpectralSeparator.h  gFractorDSP.cpp  gFractorDSP.h
Source/DSP/Analysis/: FFTProcessor.cpp  FFTProcessor.h  SmoothingStrategies.h
Source/DSP/Core/: DSPConstants.h  gFractorDSP.cpp  gFractorDSP.h
Source/DSP/Interfaces/: IAudioDataSink.h  IDSPProcessor.h  IFilterBank.h  IGainProcessor.h  IPeakLevelSource.h  ITransientDetector.h
Source/DSP/Monitoring/: PerformanceMonitor.cpp  PerformanceMonitor.h  SinkRegistry.cpp  SinkRegistry.h
Source/DSP/Processing/: AudioRingBuffer.cpp  AudioRingBuffer.h  BandpassFilter.h  ChannelModeStrategies.h
Source/Interfaces/: ISpectrumControls.h  ISpectrumDisplaySettings.h
Source/ML/: KickDetector.cpp  KickDetector.h
Source/Parameters/: ParameterIDs.h
Source/State/: ParameterDefaults.h  ParameterIDs.h  ParameterLayout.h  ParameterListener.h  PluginState.cpp  PluginState.h  PresetManager.cpp  PresetManager.h
Source/UI/: HintManager.h  ISpectrumControls.h  ISpectrumDisplaySettings.h  UIController.cpp  UIController.h
Source/UI/Components/: AudioRingBuffer.cpp  AudioVisualizerBase.h  FFTProcessor.h  FooterBar.cpp  FooterBar.h  GhostSpectrum.cpp  GhostSpectrum.h  HeaderBar.cpp  HeaderBar.h  MeteringPanel.cpp  MeteringPanel.h  PeakHold.cpp  PeakHold.h  PreferencePanel.cpp  PreferencePanel.h  SonogramView.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SpectrumTooltip.h
Source/UI/Controls/: DropdownPill.h  FooterBar.cpp  FooterBar.h  HeaderBar.cpp  HeaderBar.h  HintBar.cpp  HintBar.h  Logo.cpp  Logo.h  PanelBackdrop.h  PanelDivider.h  PerformanceDisplay.h  PillButton.h
Source/UI/Controls/Buttons/: DropdownPill.h  PillButton.h  ToggleButton.h  VerticalDivider.h
Source/UI/LookAndFeel/: gFractorLookAndFeel.h
Source/UI/Panels/: HelpPanel.cpp  HelpPanel.h  MeteringPanel.h  PreferencePanel.cpp  PreferencePanel.h  StereoMeteringPanel.cpp  StereoMeteringPanel.h  TransientMeteringPanel.cpp  TransientMeteringPanel.h
Source/UI/Theme/: ButtonCaptions.h  ColorPalette.h  Icons.h  LayoutConstants.h  Spacing.h  Symbols.h  Typography.h  UILabels.h
Source/UI/Utility/: AnalyzerSettings.h  ChannelMode.h
Source/UI/Visualizers/: AudioVisualizerBase.cpp  AudioVisualizerBase.h  BandConstants.h  GhostSpectrum.cpp  GhostSpectrum.h  PeakHold.cpp  PeakHold.h  SonogramView.cpp  SonogramView.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SpectrumTooltip.cpp  SpectrumTooltip.h  TargetCurve.cpp  TargetCurve.h
Source/Utility/: AnalyzerSettings.h  ChannelMode.h  DisplayRange.h  SpectrumAnalyzerDefaults.h
Tests/: AudioRoutingTests.cpp  BasicTests.cpp  CMakeLists.txt  CoreTests.cpp  DSPTests.cpp  HintManagerTests.cpp  PluginIntegrationTests.cpp  PresetManagerTests.cpp  TargetCurveTests.cpp  UIUtilityTests.cpp  VST3IntegrationTests.cpp
